# otus_smart_home_server

./: .gitignore  .gitmodules  Cargo.toml
smart_home_client/: Cargo.toml
smart_home_client/examples/: client.rs
smart_home_client/src/: lib.rs
smart_home_server/: Cargo.toml
smart_home_server/src/: controller.rs  lib.rs  main.rs  storage.rs
smart_home_server/src/api/: dto.rs  error.rs  mod.rs  routes.rs
