[package]
name = "smart_home_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
smart_home_server = { path="../smart_home_server" }
serde = { version = "*", features = ["derive"] }