[package]
name = "smart_home_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart_home = {path="../smart_home"}
actix-web = "4"
serde = { version = "*", features = ["derive"] }
thiserror = "*"